fix scrolling on mobile navigation

--- a/src/app/_components/navigation/styles.module.css
+++ b/src/app/_components/navigation/styles.module.css
@@ -163,6 +163,11 @@
 
   .navigation__links_active {
     transform: translateX(0);
+    position: fixed;
+  }
+
+  .navigation_active{
+    position: fixed;
   }
 
   .navigation_active .navigation__mobileIcon {
